# wgpu-example

./: Cargo.toml  build.rs
src/: assets.rs  camera.rs  depth_buffer.wgsl  lib.rs  light.wgsl  main.rs  model.rs  shader.wgsl  shapes.rs  texture.rs
